change api url heatmap zone and transaction